--- a/MapKit/Base.lproj/Main.storyboard
+++ b/MapKit/Base.lproj/Main.storyboard
@@ -23,15 +23,6 @@
                                     <outlet property="delegate" destination="vXZ-lx-hvc" id="uHI-WQ-29k"/>
                                 </connections>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jMr-Yh-Ll1">
-                                <rect key="frame" x="554" y="550" width="30" height="30"/>
-                                <state key="normal" title="Go!">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="goTo8Beat:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Bh5-Aw-GXp"/>
-                                </connections>
-                            </button>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ls2-kA-ppM">
                                 <rect key="frame" x="16" y="20" width="84" height="98"/>
                                 <constraints>
@@ -39,10 +30,21 @@
                                     <constraint firstAttribute="width" constant="84" id="yxH-Pb-sAV"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jMr-Yh-Ll1">
+                                <rect key="frame" x="515" y="532" width="65" height="48"/>
+                                <fontDescription key="fontDescription" name="HiraKakuProN-W6" family="Hiragino Kaku Gothic ProN" pointSize="36"/>
+                                <state key="normal" title="Go!">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="goTo8Beat:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Bh5-Aw-GXp"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="jMr-Yh-Ll1" secondAttribute="trailing" constant="16" id="7Hz-Gk-OZc"/>
+                            <constraint firstAttribute="trailing" secondItem="jMr-Yh-Ll1" secondAttribute="trailing" constant="20" id="7Hz-Gk-OZc"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="jMr-Yh-Ll1" secondAttribute="bottom" constant="20" id="7xT-1Z-dS9"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="T5z-sn-EMu" secondAttribute="bottom" id="R3J-QU-vnV"/>
                             <constraint firstAttribute="trailing" secondItem="T5z-sn-EMu" secondAttribute="trailing" id="RKg-BN-ceR"/>
@@ -58,6 +60,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="311" y="331"/>
         </scene>
     </scenes>
     <resources>
